# decryptpdf

./: .all-contributorsrc  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  1-bug_report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml  labels.yml  poetry-upgrade.yml  upgrader.yml
docs/: conf.py  index.md  installation.md  usage.md
src/decryptpdf/: __init__.py  __main__.py  _main.py  cli.py
tests/: test_cli.py  test_dunder_main.py  test_main.py
